# XaiGis

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
configs/: default.json
geology/: atyrau_targets.geojson
paper_runs/: README.md
scripts/: create_dummy_safe.py  verify_paper_runs_repro.py
src/xaigis/: __init__.py  cli.py  config.py  dataset.py  explain.py  features.py  labels.py  modeling.py  report.py  utils.py
